--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <div id="xecurrencywidget"></div>
-<script>var xeCurrencyWidget = {"domain":"github.io","language":"en","size":"normal"};</script>
+<script>var xeCurrencyWidget = {"domain":"ys112.github.io/","language":"en","size":"normal"};</script>
 <script src="https://www.xe.com/syndication/currencyconverterwidget.js"></script>
